welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value poseBrosse
poseBrosse();avance();
^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
if(getCouleurSol() == Color.green){avance()}else{recule();droite()}
                                         ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
if(getCouleurSol() == Color.green){avance()}else{recule();droite()}
                                                                ^