welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
poseBrosse();avance();
if(getCouleurSol() == Color.green){avance()}else{recule();droite()}

}        
